--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
          <div class="row text-center text-white">
            <div class="col-12">
              <div class="footer-bottom__copyright">
-               &COPY; Copyright 2021 | Created by <a href="#">Hicham bq</a>
+               &COPY; Copyright 2021 | Created by <a href="https://www.linkedin.com/in/hicham-bourziq-755ab0136/" target="_blank">Hicham bq</a>
              </div>
            </div>
          </div>
